# generalized-lloyd-max-methods

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: example.cpp
include/: LGB-methods.h
include/LGB-methods/: LGBsplit.h
src/: CMakeLists.txt  example.cpp  include.h  main.cpp
src/algorithms/: LGB.h  LGBrandom.h  LGBsplit.h
test/algorithms/: LGBTest.cpp  LGBrandomTest.cpp  LGBsplitTest.cpp
tests/: CMakeLists.txt
tests/LGB-methods/: LGBTest.cpp  LGBrandomTest.cpp  LGBsplitTest.cpp
